ecmascript/parser/tests/test262-error-references/fail/41895c8145489971.js.stderr
error: Expected RBrace
 --> $DIR/tests/test262-parser/fail/41895c8145489971.js:1:18
  |
1 | `hello ${10 `test`
  |                  ^

